2008-07-12  Martin Nordholts  <martinn@svn.gnome.org>

	* app/display/gimpdisplayshell-scroll.c
	(gimp_display_shell_get_viewport): Remove invalid TODO.

2008-07-12  Martin Nordholts  <martinn@svn.gnome.org>

	* app/core/gimpmarshal.list: Added
	VOID__DOUBLE_DOUBLE_DOUBLE_DOUBLE marshaller.

	* app/widgets/gimpnavigationview.c: Make the "marker-changed"
	signal also pass the marker width and height as parameters.

	* app/display/gimpnavigationeditor.c: Updated accordingly.

2008-07-12  Sven Neumann  <sven@gimp.org>

	* configure.in: fixed check for babl.

2008-07-12  Martin Nordholts  <martinn@svn.gnome.org>

	* configure.in: Prefered casing of `babl' is `babl'.

2008-07-12  Martin Nordholts  <martinn@svn.gnome.org>

	* app/display/gimpdisplayshell-scale.c
	(gimp_display_shell_scale_setup): The scrollbars should be setup
	using the new offset, not the old counterpart.

2008-07-12  Sven Neumann  <sven@gimp.org>

	* app/tools/gimprectangletool.c: formatting.

2008-07-12  Sven Neumann  <sven@gimp.org>

	* app/core/gimpparamspecs.[ch]: added GIMP_TYPE_COLOR_ARRAY and
	GIMP_TYPE_PARAM_COLOR_ARRAY in preparation for fixing bug #332206.

2008-07-12  Martin Nordholts  <martinn@svn.gnome.org>

	* app/display/gimpdisplayshell-scale.c
	(gimp_display_shell_scale_setup): Renamed the variables sx and sy
	to sw and sh.

2008-07-12  Martin Nordholts  <martinn@svn.gnome.org>

	In this ChangeLog entry, disp_offset means disp_[xy]offset and
	offset means offset_[xy].

	* app/display/gimpdisplayshell.[ch]: Kill disp_offset! We now
	represent that by a negative offset.

	* app/display/gimpdisplayshell-scroll.[ch]
	(gimp_display_shell_scroll_clamp_offsets)
	(gimp_display_shell_get_scaled_image_viewport_offset): Adjust
	accordingly to preserve current behaviour.

	(gimp_display_shell_get_disp_offset): New function to get the old
	disp_offset based on the new offset.

	(gimp_display_shell_get_render_start_offset): New function to get
	the old offset based on the new offset.
